Compile/BabyScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Users\Johnny\Documents\programming\XRebirthBabyScript.Core\BabyScriptParser.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace XRebirthBabyScript.Compile {

    using XRebirthBabyScript.Compile;

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class BabyScriptParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		OPPAREN=1, CLPAREN=2, OPBRACKET=3, CLBRACKET=4, OPBRACE=5, CLBRACE=6, 
		BLOCK_COMMENT=7, SLASH_COMMENT=8, LINE_BREAK=9, WS=10, PLUSPLUS=11, MINUSMINUS=12, 
		EQUALS=13, SEMICOLON=14, PLUS=15, MINUS=16, TIMES=17, DIVIDE=18, MODULO=19, 
		LT=20, LT2=21, LE=22, LE2=23, GT=24, GT2=25, GE=26, GE2=27, EQUAL=28, 
		NEQUAL=29, AND=30, OR=31, COLON=32, COMMA=33, DOT=34, QUESTIONMARK=35, 
		AT=36, HAT=37, NUMBER=38, UNITCAST=39, NOT=40, TYPEOF=41, SIN=42, COS=43, 
		SQRT=44, IF=45, THEN=46, ELSE=47, TABLE=48, ID=49, DOUBLE_QUOTE_STRING=50, 
		SINGLE_QUOTE_STRING=51;
	public const int
		RULE_document = 0, RULE_expr = 1, RULE_exprEof = 2, RULE_tableDef = 3, 
		RULE_tableRowDef = 4, RULE_squareList = 5, RULE_braceList = 6, RULE_atom = 7, 
		RULE_elementName = 8, RULE_node = 9, RULE_elementAttributes = 10, RULE_attribute = 11, 
		RULE_attributeValue = 12, RULE_nodeChildren = 13, RULE_lookupChain = 14;
	public static readonly string[] ruleNames = {
		"document", "expr", "exprEof", "tableDef", "tableRowDef", "squareList", 
		"braceList", "atom", "elementName", "node", "elementAttributes", "attribute", 
		"attributeValue", "nodeChildren", "lookupChain"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "'['", "']'", "'{'", "'}'", null, null, null, null, 
		"'++'", "'--'", "'='", "';'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", 
		"'lt'", "'<='", "'le'", "'>'", "'gt'", "'>='", "'ge'", "'=='", "'!='", 
		"'and'", "'or'", "':'", "','", "'.'", "'?'", "'@'", "'^'", null, null, 
		"'not'", "'typeof'", "'sin'", "'cos'", "'sqrt'", "'if'", "'then'", "'else'", 
		"'table'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "OPPAREN", "CLPAREN", "OPBRACKET", "CLBRACKET", "OPBRACE", "CLBRACE", 
		"BLOCK_COMMENT", "SLASH_COMMENT", "LINE_BREAK", "WS", "PLUSPLUS", "MINUSMINUS", 
		"EQUALS", "SEMICOLON", "PLUS", "MINUS", "TIMES", "DIVIDE", "MODULO", "LT", 
		"LT2", "LE", "LE2", "GT", "GT2", "GE", "GE2", "EQUAL", "NEQUAL", "AND", 
		"OR", "COLON", "COMMA", "DOT", "QUESTIONMARK", "AT", "HAT", "NUMBER", 
		"UNITCAST", "NOT", "TYPEOF", "SIN", "COS", "SQRT", "IF", "THEN", "ELSE", 
		"TABLE", "ID", "DOUBLE_QUOTE_STRING", "SINGLE_QUOTE_STRING"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "BabyScriptParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static BabyScriptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public BabyScriptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public BabyScriptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class DocumentContext : ParserRuleContext {
		public NodeContext _node;
		public IList<NodeContext> _nodeList = new List<NodeContext>();
		public NodeContext[] node() {
			return GetRuleContexts<NodeContext>();
		}
		public NodeContext node(int i) {
			return GetRuleContext<NodeContext>(i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_document; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBabyScriptParserListener typedListener = listener as IBabyScriptParserListener;
			if (typedListener != null) typedListener.EnterDocument(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBabyScriptParserListener typedListener = listener as IBabyScriptParserListener;
			if (typedListener != null) typedListener.ExitDocument(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBabyScriptParserVisitor<TResult> typedVisitor = visitor as IBabyScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDocument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DocumentContext document() {
		DocumentContext _localctx = new DocumentContext(Context, State);
		EnterRule(_localctx, 0, RULE_document);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 31;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 30; _localctx._node = node();
					_localctx._nodeList.Add(_localctx._node);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 33;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public ITerminalNode IF() { return GetToken(BabyScriptParser.IF, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode THEN() { return GetToken(BabyScriptParser.THEN, 0); }
		public ITerminalNode ELSE() { return GetToken(BabyScriptParser.ELSE, 0); }
		public ITerminalNode PLUS() { return GetToken(BabyScriptParser.PLUS, 0); }
		public ITerminalNode MINUS() { return GetToken(BabyScriptParser.MINUS, 0); }
		public ITerminalNode TABLE() { return GetToken(BabyScriptParser.TABLE, 0); }
		public ITerminalNode OPBRACKET() { return GetToken(BabyScriptParser.OPBRACKET, 0); }
		public ITerminalNode CLBRACKET() { return GetToken(BabyScriptParser.CLBRACKET, 0); }
		public TableDefContext tableDef() {
			return GetRuleContext<TableDefContext>(0);
		}
		public ITerminalNode NOT() { return GetToken(BabyScriptParser.NOT, 0); }
		public ITerminalNode TYPEOF() { return GetToken(BabyScriptParser.TYPEOF, 0); }
		public ITerminalNode OPPAREN() { return GetToken(BabyScriptParser.OPPAREN, 0); }
		public ITerminalNode CLPAREN() { return GetToken(BabyScriptParser.CLPAREN, 0); }
		public ITerminalNode SIN() { return GetToken(BabyScriptParser.SIN, 0); }
		public ITerminalNode COS() { return GetToken(BabyScriptParser.COS, 0); }
		public ITerminalNode SQRT() { return GetToken(BabyScriptParser.SQRT, 0); }
		public LookupChainContext lookupChain() {
			return GetRuleContext<LookupChainContext>(0);
		}
		public ITerminalNode AT() { return GetToken(BabyScriptParser.AT, 0); }
		public ITerminalNode TIMES() { return GetToken(BabyScriptParser.TIMES, 0); }
		public ITerminalNode DIVIDE() { return GetToken(BabyScriptParser.DIVIDE, 0); }
		public ITerminalNode MODULO() { return GetToken(BabyScriptParser.MODULO, 0); }
		public ITerminalNode HAT() { return GetToken(BabyScriptParser.HAT, 0); }
		public ITerminalNode LT() { return GetToken(BabyScriptParser.LT, 0); }
		public ITerminalNode LT2() { return GetToken(BabyScriptParser.LT2, 0); }
		public ITerminalNode LE() { return GetToken(BabyScriptParser.LE, 0); }
		public ITerminalNode LE2() { return GetToken(BabyScriptParser.LE2, 0); }
		public ITerminalNode GT() { return GetToken(BabyScriptParser.GT, 0); }
		public ITerminalNode GT2() { return GetToken(BabyScriptParser.GT2, 0); }
		public ITerminalNode GE() { return GetToken(BabyScriptParser.GE, 0); }
		public ITerminalNode GE2() { return GetToken(BabyScriptParser.GE2, 0); }
		public ITerminalNode EQUAL() { return GetToken(BabyScriptParser.EQUAL, 0); }
		public ITerminalNode NEQUAL() { return GetToken(BabyScriptParser.NEQUAL, 0); }
		public ITerminalNode AND() { return GetToken(BabyScriptParser.AND, 0); }
		public ITerminalNode OR() { return GetToken(BabyScriptParser.OR, 0); }
		public ITerminalNode QUESTIONMARK() { return GetToken(BabyScriptParser.QUESTIONMARK, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBabyScriptParserListener typedListener = listener as IBabyScriptParserListener;
			if (typedListener != null) typedListener.EnterExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBabyScriptParserListener typedListener = listener as IBabyScriptParserListener;
			if (typedListener != null) typedListener.ExitExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBabyScriptParserVisitor<TResult> typedVisitor = visitor as IBabyScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		return expr(0);
	}

	private ExprContext expr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ExprContext _localctx = new ExprContext(Context, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 36; Match(IF);
				State = 37; expr(0);
				State = 38; Match(THEN);
				State = 39; expr(0);
				State = 42;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
				case 1:
					{
					State = 40; Match(ELSE);
					State = 41; expr(0);
					}
					break;
				}
				}
				break;
			case 2:
				{
				State = 44; Match(PLUS);
				State = 45; expr(21);
				}
				break;
			case 3:
				{
				State = 46; Match(MINUS);
				State = 47; expr(20);
				}
				break;
			case 4:
				{
				State = 48; Match(TABLE);
				State = 49; Match(OPBRACKET);
				State = 51;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==OPBRACE || _la==ID) {
					{
					State = 50; tableDef();
					}
				}

				State = 53; Match(CLBRACKET);
				}
				break;
			case 5:
				{
				State = 54;
				_la = TokenStream.LA(1);
				if ( !(_la==NOT || _la==TYPEOF) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 55; expr(18);
				}
				break;
			case 6:
				{
				State = 56;
				_la = TokenStream.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SIN) | (1L << COS) | (1L << SQRT))) != 0)) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 57; Match(OPPAREN);
				State = 58; expr(0);
				State = 59; Match(CLPAREN);
				}
				break;
			case 7:
				{
				State = 62;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
				case 1:
					{
					State = 61; Match(AT);
					}
					break;
				}
				State = 64; lookupChain();
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 113;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 111;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 67;
						if (!(Precpred(Context, 16))) throw new FailedPredicateException(this, "Precpred(Context, 16)");
						State = 68; Match(TIMES);
						State = 69; expr(17);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 70;
						if (!(Precpred(Context, 15))) throw new FailedPredicateException(this, "Precpred(Context, 15)");
						State = 71; Match(DIVIDE);
						State = 72; expr(16);
						}
						break;
					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 73;
						if (!(Precpred(Context, 14))) throw new FailedPredicateException(this, "Precpred(Context, 14)");
						State = 74; Match(MODULO);
						State = 75; expr(15);
						}
						break;
					case 4:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 76;
						if (!(Precpred(Context, 13))) throw new FailedPredicateException(this, "Precpred(Context, 13)");
						State = 77; Match(PLUS);
						State = 78; expr(14);
						}
						break;
					case 5:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 79;
						if (!(Precpred(Context, 12))) throw new FailedPredicateException(this, "Precpred(Context, 12)");
						State = 80; Match(MINUS);
						State = 81; expr(13);
						}
						break;
					case 6:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 82;
						if (!(Precpred(Context, 11))) throw new FailedPredicateException(this, "Precpred(Context, 11)");
						State = 83; Match(HAT);
						State = 84; expr(12);
						}
						break;
					case 7:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 85;
						if (!(Precpred(Context, 10))) throw new FailedPredicateException(this, "Precpred(Context, 10)");
						State = 86;
						_la = TokenStream.LA(1);
						if ( !(_la==LT || _la==LT2) ) {
						ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 87; expr(11);
						}
						break;
					case 8:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 88;
						if (!(Precpred(Context, 9))) throw new FailedPredicateException(this, "Precpred(Context, 9)");
						State = 89;
						_la = TokenStream.LA(1);
						if ( !(_la==LE || _la==LE2) ) {
						ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 90; expr(10);
						}
						break;
					case 9:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 91;
						if (!(Precpred(Context, 8))) throw new FailedPredicateException(this, "Precpred(Context, 8)");
						State = 92;
						_la = TokenStream.LA(1);
						if ( !(_la==GT || _la==GT2) ) {
						ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 93; expr(9);
						}
						break;
					case 10:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 94;
						if (!(Precpred(Context, 7))) throw new FailedPredicateException(this, "Precpred(Context, 7)");
						State = 95;
						_la = TokenStream.LA(1);
						if ( !(_la==GE || _la==GE2) ) {
						ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 96; expr(8);
						}
						break;
					case 11:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 97;
						if (!(Precpred(Context, 6))) throw new FailedPredicateException(this, "Precpred(Context, 6)");
						State = 98; Match(EQUAL);
						State = 99; expr(7);
						}
						break;
					case 12:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 100;
						if (!(Precpred(Context, 5))) throw new FailedPredicateException(this, "Precpred(Context, 5)");
						State = 101; Match(NEQUAL);
						State = 102; expr(6);
						}
						break;
					case 13:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 103;
						if (!(Precpred(Context, 4))) throw new FailedPredicateException(this, "Precpred(Context, 4)");
						State = 104; Match(AND);
						State = 105; expr(5);
						}
						break;
					case 14:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 106;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 107; Match(OR);
						State = 108; expr(4);
						}
						break;
					case 15:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 109;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 110; Match(QUESTIONMARK);
						}
						break;
					}
					} 
				}
				State = 115;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class ExprEofContext : ParserRuleContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(BabyScriptParser.Eof, 0); }
		public ExprEofContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exprEof; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBabyScriptParserListener typedListener = listener as IBabyScriptParserListener;
			if (typedListener != null) typedListener.EnterExprEof(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBabyScriptParserListener typedListener = listener as IBabyScriptParserListener;
			if (typedListener != null) typedListener.ExitExprEof(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBabyScriptParserVisitor<TResult> typedVisitor = visitor as IBabyScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprEof(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprEofContext exprEof() {
		ExprEofContext _localctx = new ExprEofContext(Context, State);
		EnterRule(_localctx, 4, RULE_exprEof);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116; expr(0);
			State = 117; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TableDefContext : ParserRuleContext {
		public TableRowDefContext[] tableRowDef() {
			return GetRuleContexts<TableRowDefContext>();
		}
		public TableRowDefContext tableRowDef(int i) {
			return GetRuleContext<TableRowDefContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(BabyScriptParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(BabyScriptParser.COMMA, i);
		}
		public TableDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tableDef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBabyScriptParserListener typedListener = listener as IBabyScriptParserListener;
			if (typedListener != null) typedListener.EnterTableDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBabyScriptParserListener typedListener = listener as IBabyScriptParserListener;
			if (typedListener != null) typedListener.ExitTableDef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBabyScriptParserVisitor<TResult> typedVisitor = visitor as IBabyScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTableDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TableDefContext tableDef() {
		TableDefContext _localctx = new TableDefContext(Context, State);
		EnterRule(_localctx, 6, RULE_tableDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119; tableRowDef();
			State = 124;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 120; Match(COMMA);
				State = 121; tableRowDef();
				}
				}
				State = 126;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TableRowDefContext : ParserRuleContext {
		public ITerminalNode EQUALS() { return GetToken(BabyScriptParser.EQUALS, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode ID() { return GetToken(BabyScriptParser.ID, 0); }
		public ITerminalNode OPBRACE() { return GetToken(BabyScriptParser.OPBRACE, 0); }
		public ITerminalNode CLBRACE() { return GetToken(BabyScriptParser.CLBRACE, 0); }
		public TableRowDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tableRowDef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBabyScriptParserListener typedListener = listener as IBabyScriptParserListener;
			if (typedListener != null) typedListener.EnterTableRowDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBabyScriptParserListener typedListener = listener as IBabyScriptParserListener;
			if (typedListener != null) typedListener.ExitTableRowDef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBabyScriptParserVisitor<TResult> typedVisitor = visitor as IBabyScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTableRowDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TableRowDefContext tableRowDef() {
		TableRowDefContext _localctx = new TableRowDefContext(Context, State);
		EnterRule(_localctx, 8, RULE_tableRowDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ID:
				{
				State = 127; Match(ID);
				}
				break;
			case OPBRACE:
				{
				State = 128; Match(OPBRACE);
				State = 129; expr(0);
				State = 130; Match(CLBRACE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 134; Match(EQUALS);
			State = 135; expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SquareListContext : ParserRuleContext {
		public ITerminalNode OPBRACKET() { return GetToken(BabyScriptParser.OPBRACKET, 0); }
		public ITerminalNode CLBRACKET() { return GetToken(BabyScriptParser.CLBRACKET, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(BabyScriptParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(BabyScriptParser.COMMA, i);
		}
		public SquareListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_squareList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBabyScriptParserListener typedListener = listener as IBabyScriptParserListener;
			if (typedListener != null) typedListener.EnterSquareList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBabyScriptParserListener typedListener = listener as IBabyScriptParserListener;
			if (typedListener != null) typedListener.ExitSquareList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBabyScriptParserVisitor<TResult> typedVisitor = visitor as IBabyScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSquareList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SquareListContext squareList() {
		SquareListContext _localctx = new SquareListContext(Context, State);
		EnterRule(_localctx, 10, RULE_squareList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 137; Match(OPBRACKET);
			State = 146;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				{
				State = 138; expr(0);
				State = 143;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==COMMA) {
					{
					{
					State = 139; Match(COMMA);
					State = 140; expr(0);
					}
					}
					State = 145;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			}
			State = 148; Match(CLBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
